@@ -1,4 +1,3 @@
-TODO: switch default keypad mode to cope for broken apps.
 TODO: manpage 900mb update
 TODO: safer command: keymap processing.
 TODO: "slow" rendering mode for bidi and scripts
@@ -13,6 +12,9 @@ WISH: tabbed windows (hey, just use screen...)
 WISH: just for fun, do shade and tint with XRender.
 
 5.2
+	- new option -pty-fd that makes the terminal a slave
+          that uses an existing pty for I/O instead of starting
+          a command.
         - SYNCCVS. backported bugfixes done to rxvt
           (sourceforge bugs #1028739, #1028732), except for
           pts/%s fix as it seems to collide with freebsd,
